# stark-parts

./: .gitignore  AGENTS.md  AMBIGUITY.md  Cargo.toml  IMPL_SPEC.md  PLAN.md  README.md  SPEC.md  dprint.json  index.html  package-lock.json  package.json  playwright.config.mjs  rust-toolchain.toml  turbo.json  vercel.json
.github/workflows/: ci.yml
catalog/: BUILD_RECEIPT.md  stark-parts.json5
crates/stark-parts-catalog/: Cargo.toml
crates/stark-parts-catalog/src/: lib.rs
crates/stark-parts-cli/: Cargo.toml
crates/stark-parts-cli/src/: main.rs
crates/stark-parts-web/: Cargo.toml
crates/stark-parts-web/src/: lib.rs  main.rs  search.rs
lore/: 2026-05-26-stark-parts-crawl.md  2026-05-29-search-performance-profile.md  AGENTS.md
scripts/: assemble-catalog.mjs  assemble-catalog.test.mjs  build-app.sh  test-modernize-baseline.sh  verify-modernize-baseline.sh
tests/: static-smoke.spec.mjs
