[workspace]
members = [
  "crates/stark-parts-catalog",
  "crates/stark-parts-cli",
  "crates/stark-parts-web",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/scode/stark-parts"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
json5 = "1.3.1"
leptos = { version = "0.8.14", default-features = false }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
