[package]
name = "stark-parts-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
stark-parts-catalog = { path = "../stark-parts-catalog" }
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "stark-parts"
path = "src/main.rs"
