[package]
name = "stark-parts-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
stark-parts-catalog = { path = "../stark-parts-catalog", default-features = false }
url.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net.workspace = true
leptos = { workspace = true, features = ["csr"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
leptos = { workspace = true, features = ["ssr"] }
